update size of footer logo to prevent right side of footer from being cut off

--- a/E-commerce website/wwwroot/css/footer.css
+++ b/E-commerce website/wwwroot/css/footer.css
@@ -13,7 +13,7 @@
 }
 
     .footer-content .logo {
-        height: 160px;
+        height: 130px;
     }
 
 .footer-ul-container {
@@ -23,7 +23,7 @@
 }
 
 .category {
-    width: 200px;
+   /*width: 200px*/ width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
